--- a/playbooks/web/drupal.conf.j2
+++ b/playbooks/web/drupal.conf.j2
@@ -40,6 +40,7 @@ server {
         fastcgi_intercept_errors on;
         fastcgi_pass unix:/var/run/php5-fpm.sock;
         fastcgi_read_timeout 120s;
+        add_header X-Backend-Server $hostname;
     }
 
     location ~ ^/sites/.*/files/styles/ {
