Fixes #28: Add local testing configuration (Vagrant-based).

--- a/playbooks/drupal/settings.php.j2
+++ b/playbooks/drupal/settings.php.j2
@@ -46,7 +46,7 @@ $settings['container_yamls'][] = __DIR__ . '/services.yml';
 // Redis caching configuration.
 $settings['redis.connection']['interface'] = 'PhpRedis';
 $settings['redis.connection']['host'] = '{{ groups.cache[0] }}';
-$settings['cache']['default'] = 'cache.backend.redis';
+// $settings['cache']['default'] = 'cache.backend.redis';
 
 // Local settings files.
 if (file_exists(__DIR__ . '/settings.local.php')) {
