--- a/setup/networking/templates/interfaces.j2
+++ b/setup/networking/templates/interfaces.j2
@@ -3,7 +3,7 @@ auto lo
 iface lo inet loopback
 iface eth0 inet static
   address {{ dramble_ip_address }}/24
-  gateway {{ networking_default_gateway }}
+  gateway 10.0.1.1
 
 allow-hotplug wlan0
 iface wlan0 inet manual
