Fixes #41: Make entire drupal playbook capable of being run on the local network.

--- a/playbooks/balancer/balancer.conf.j2
+++ b/playbooks/balancer/balancer.conf.j2
@@ -47,3 +47,11 @@ server {
     root /var/cache/munin/www;
     access_log off; # Save a ton of precious disk I/O.
 }
+
+# Git repository server configuration.
+server {
+    listen 80;
+    server_name git.{{ site_url }};
+    root /opt/git;
+    access_log off; # Save a ton of precious disk I/O.
+}
