--- a/setup/networking/templates/hosts.j2
+++ b/setup/networking/templates/hosts.j2
@@ -6,3 +6,10 @@ ff02::1   ip6-allnodes
 ff02::2   ip6-allrouters
 
 127.0.1.1 {{ dramble_hostname }}
+
+{{ groups.pis[0] }} pidramble.com bal1.pidramble.com git.pidramble.com
+{{ groups.pis[1] }} www1.pidramble.com
+{{ groups.pis[2] }} www2.pidramble.com
+{{ groups.pis[3] }} www3.pidramble.com
+{{ groups.pis[4] }} cache1.pidramble.com
+{{ groups.pis[5] }} db1.pidramble.com
