Fixes #46: Remove Redis and Redis configuration.

--- a/setup/networking/templates/hosts.j2
+++ b/setup/networking/templates/hosts.j2
@@ -11,5 +11,5 @@ ff02::2   ip6-allrouters
 {{ groups.pis[1] }} www1.pidramble.com
 {{ groups.pis[2] }} www2.pidramble.com
 {{ groups.pis[3] }} www3.pidramble.com
-{{ groups.pis[4] }} cache1.pidramble.com
+{{ groups.pis[4] }} www4.pidramble.com
 {{ groups.pis[5] }} db1.pidramble.com
