Issue #47: Get Drupal installed (after boris/composer/drush insanity).

--- a/testing/drupal/single-pi/templates/settings.php.j2
+++ b/testing/drupal/single-pi/templates/settings.php.j2
@@ -10,7 +10,7 @@ $databases['default']['default'] = array(
   'database' => '{{ drupal_db_name }}',
   'username' => '{{ drupal_db_username }}',
   'password' => '{{ drupal_db_password }}',
-  'host' => '{{ groups.database[0] }}',
+  'host' => '127.0.0.1',
   'port' => '3306',
   'namespace' => 'Drupal\\Core\\Database\\Driver\\mysql',
   'driver' => 'mysql',
