--- a/setup/networking/templates/interfaces.j2
+++ b/setup/networking/templates/interfaces.j2
@@ -4,6 +4,7 @@ iface lo inet loopback
 iface eth0 inet static
   address {{ dramble_ip_address }}/24
   gateway 10.0.1.1
+  dns-nameservers {{ dns_nameservers | join(' ') }}
 
 allow-hotplug wlan0
 iface wlan0 inet manual
