More optimizations for rapid testing with Drupal.

--- a/playbooks/drupal/templates/settings.php.j2
+++ b/playbooks/drupal/templates/settings.php.j2
@@ -34,7 +34,7 @@ $settings['reverse_proxy_header'] = 'X-Forwarded-For';
 $settings['omit_vary_cookie'] = TRUE;
 
 // Base URL.
-$base_url = 'http://{{ site_url }}';  // NO trailing slash!
+// $base_url = 'http://{{ site_url }}';  // NO trailing slash!
 
 // Fast 404 configuration.
 $config['system.performance']['fast_404']['exclude_paths'] = '/\/(?:styles)\//';
