--- a/setup/networking/templates/hosts.j2
+++ b/setup/networking/templates/hosts.j2
@@ -7,9 +7,8 @@ ff02::2   ip6-allrouters
 
 127.0.1.1 {{ dramble_hostname }}
 
-{{ groups.pis[0] }} pidramble.com www.pidramble.com bal1.pidramble.com git.pidramble.com
-{{ groups.pis[1] }} www1.pidramble.com
-{{ groups.pis[2] }} www2.pidramble.com
-{{ groups.pis[3] }} www3.pidramble.com
-{{ groups.pis[4] }} www4.pidramble.com
-{{ groups.pis[5] }} db1.pidramble.com
+10.0.1.60 pidramble.com www.pidramble.com bal1.pidramble.com git.pidramble.com
+10.0.1.61 www1.pidramble.com
+10.0.1.62 www2.pidramble.com
+10.0.1.63 db1.pidramble.com
+10.0.1.64 db2.pidramble.com
