--- a/setup/networking/templates/interfaces.j2
+++ b/setup/networking/templates/interfaces.j2
@@ -1,8 +1,10 @@
 auto lo
 
 iface lo inet loopback
+
 iface eth0 inet static
   address {{ dramble_ip_address }}/24
+  netmask 255.255.255.0
   gateway 10.0.1.1
   dns-nameservers {{ dns_nameservers | join(' ') }}
 
