Fixes #67: RGB LED GPIO scripts no longer require sudo.

--- a/playbooks/roles/leds/templates/colors.j2
+++ b/playbooks/roles/leds/templates/colors.j2
@@ -3,7 +3,7 @@
 # Fade an LED (or one color of an RGB LED) using GPIO's PWM capabilities.
 #
 # Usage:
-#   sudo python colors.py 255 255 255
+#   python colors.py 255 255 255
 #
 # @author Jeff Geerling, 2015
 
