--- a/playbooks/roles/leds/templates/fade.j2
+++ b/playbooks/roles/leds/templates/fade.j2
@@ -3,7 +3,7 @@
 # Fade an LED (or one color of an RGB LED) using GPIO's PWM capabilities.
 #
 # Usage:
-#   sudo python fade.py
+#   python fade.py
 #
 # @author Jeff Geerling, 2015
 
