--- a/playbooks/roles/leds/templates/led-log-monitor.j2
+++ b/playbooks/roles/leds/templates/led-log-monitor.j2
@@ -3,7 +3,7 @@
 # Monitor a file and toggle onboard LED when it is changed.
 #
 # Usage:
-#   sudo python log-monitor-rgb.py [file]
+#   python log-monitor-rgb.py [file]
 #
 # @author Jeff Geerling, 2015
 
