--- a/playbooks/roles/leds/templates/rgb.j2
+++ b/playbooks/roles/leds/templates/rgb.j2
@@ -3,7 +3,7 @@
 # Set an RGB LED to either red, green, or blue.
 #
 # Usage:
-#   sudo python rgb.py [color]
+#   python rgb.py [color]
 #
 # @author Jeff Geerling, 2015
 
