--- a/setup/networking/templates/dhcpcd.conf.j2
+++ b/setup/networking/templates/dhcpcd.conf.j2
@@ -6,6 +6,11 @@ static ip_address={{ dramble_ip_address }}/24
 static routers=10.0.1.1
 static domain_name_servers={{ dns_nameservers | join(' ') }}
 
+interface wlan0
+static ip_address={{ dramble_ip_address }}/24
+static routers=10.0.1.1
+static domain_name_servers={{ dns_nameservers | join(' ') }}
+
 # Allow users of this group to interact with dhcpcd via the control socket.
 #controlgroup wheel
 
