Fixes #78: Add a simple MySQL failover playbook.

--- a/playbooks/drupal/templates/settings.php.j2
+++ b/playbooks/drupal/templates/settings.php.j2
@@ -10,7 +10,11 @@ $databases['default']['default'] = array(
   'database' => '{{ drupal_db_name }}',
   'username' => '{{ drupal_db_username }}',
   'password' => '{{ drupal_db_password }}',
+{% if mysql_slave_failover_active == false %}
   'host' => '{{ groups.database[0] }}',
+{% else %}
+  'host' => '{{ groups.database[1] }}',
+{% endif %}
   'port' => '3306',
   'driver' => 'mysql',
   'prefix' => '',
