Some random fixes.

--- a/playbooks/web/templates/drupal.conf.j2
+++ b/playbooks/web/templates/drupal.conf.j2
@@ -43,6 +43,7 @@ server {
         fastcgi_intercept_errors on;
         fastcgi_pass {{ php_fpm_listen }};
         fastcgi_read_timeout 240s;
+        fastcgi_connect_timeout 2s;
         add_header X-Backend-Server $hostname;
     }
 
