--- a/playbooks/balancer/balancer.conf.j2
+++ b/playbooks/balancer/balancer.conf.j2
@@ -39,6 +39,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_pass http://dramble;
+        proxy_connect_timeout 2s;
         add_header X-Proxy-Cache $upstream_cache_status;
 
         # Proxy cache configuration.
