Fixes #87: Allow running install.php or update.php correctly.

--- a/playbooks/web/templates/drupal.conf.j2
+++ b/playbooks/web/templates/drupal.conf.j2
@@ -35,6 +35,11 @@ server {
         return 404;
     }
 
+    # Redirect common PHP files to their new locations.
+    location ~ ^((?!.*(?:core)).*)/(install.php|rebuild.php) {
+         return 301 $scheme://$host$1/core/$2$is_args$args;
+    }
+
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
