--- a/setup/networking/templates/hosts.j2
+++ b/setup/networking/templates/hosts.j2
@@ -7,8 +7,8 @@ ff02::2   ip6-allrouters
 
 127.0.1.1 {{ dramble_hostname }}
 
-10.0.1.60 pidramble.com www.pidramble.com bal1.pidramble.com git.pidramble.com
-10.0.1.61 www1.pidramble.com
-10.0.1.62 www2.pidramble.com
-10.0.1.63 db1.pidramble.com
-10.0.1.64 db2.pidramble.com
+10.0.100.44 kube1.pidramble.com
+10.0.100.45 kube2.pidramble.com
+10.0.100.46 kube3.pidramble.com
+10.0.100.47 kube4.pidramble.com
+10.0.100.48 kube5.pidramble.com
