--- a/setup/networking/templates/hosts.j2
+++ b/setup/networking/templates/hosts.j2
@@ -7,8 +7,8 @@ ff02::2   ip6-allrouters
 
 127.0.1.1 {{ dramble_hostname }}
 
-10.0.100.61 kube1.pidramble.com
-10.0.100.62 kube2.pidramble.com
-10.0.100.63 kube3.pidramble.com
-10.0.100.64 kube4.pidramble.com
-10.0.100.65 kube5.pidramble.com
+10.0.100.61 kube1 kube1.pidramble.com
+10.0.100.62 kube2 kube2.pidramble.com
+10.0.100.63 kube3 kube3.pidramble.com
+10.0.100.64 kube4 kube4.pidramble.com
+10.0.100.65 kube5 kube5.pidramble.com
