--- a/setup/networking/templates/hosts.j2
+++ b/setup/networking/templates/hosts.j2
@@ -7,8 +7,7 @@ ff02::2   ip6-allrouters
 
 127.0.1.1 {{ dramble_hostname }}
 
-10.0.100.61 kube1 kube1.pidramble.com
-10.0.100.62 kube2 kube2.pidramble.com
-10.0.100.63 kube3 kube3.pidramble.com
-10.0.100.64 kube4 kube4.pidramble.com
-10.0.100.65 kube5 kube5.pidramble.com
+{# Add an entry for each host in the cluster, using the loop index to map IPs #}
+{% for host in groups['dramble'] %}
+10.0.100.{{ 60 + loop.index }} kube{{ loop.index }} kube{{ loop.index }}.pidramble.com
+{% endfor %}
