--- a/setup/networking/templates/dhcpcd.conf.j2
+++ b/setup/networking/templates/dhcpcd.conf.j2
@@ -1,15 +1,5 @@
-# Configuration for dhcpcd.
+# A sample configuration for dhcpcd.
 # See dhcpcd.conf(5) for details.
-
-interface eth0
-static ip_address={{ dramble_ip_address }}/24
-static routers=10.0.100.1
-static domain_name_servers={{ dns_nameservers | join(' ') }}
-
-interface wlan0
-static ip_address={{ dramble_ip_address }}/24
-static routers=10.0.100.1
-static domain_name_servers={{ dns_nameservers | join(' ') }}
 
 # Allow users of this group to interact with dhcpcd via the control socket.
 #controlgroup wheel
@@ -21,6 +11,8 @@ hostname
 clientid
 # or
 # Use the same DUID + IAID as set in DHCPv6 for DHCPv4 ClientID as per RFC4361.
+# Some non-RFC compliant DHCP servers do not reply with this set.
+# In this case, comment out duid and enable clientid above.
 #duid
 
 # Persist interface configuration when dhcpcd exits.
@@ -34,18 +26,41 @@ option rapid_commit
 # A list of options to request from the DHCP server.
 option domain_name_servers, domain_name, domain_search, host_name
 option classless_static_routes
+# Respect the network MTU. This is applied to DHCP routes.
+option interface_mtu
+
 # Most distributions have NTP support.
-option ntp_servers
-# Respect the network MTU.
-# Some interface drivers reset when changing the MTU so disabled by default.
-#option interface_mtu
+#option ntp_servers
 
 # A ServerID is required by RFC2131.
 require dhcp_server_identifier
 
-# Generate Stable Private IPv6 Addresses instead of hardware based ones
+# Generate SLAAC address using the Hardware Address of the interface
+#slaac hwaddr
+# OR generate Stable Private IPv6 Addresses based from the DUID
 slaac private
 
-# A hook script is provided to lookup the hostname if not set by the DHCP
-# server, but it should not be run by default.
-nohook lookup-hostname
+# Example static IP configuration:
+#interface eth0
+#static ip_address=192.168.0.10/24
+#static ip6_address=fd51:42f8:caae:d92e::ff/64
+#static routers=192.168.0.1
+#static domain_name_servers=192.168.0.1 8.8.8.8 fd51:42f8:caae:d92e::1
+
+# It is possible to fall back to a static IP if DHCP fails:
+# define static profile
+#profile static_eth0
+#static ip_address=192.168.1.23/24
+#static routers=192.168.1.1
+#static domain_name_servers=192.168.1.1
+
+# fallback to static profile on eth0
+#interface eth0
+#fallback static_eth0
+
+# Bramble configuration
+
+interface eth0
+static ip_address={{ bramble_ip_address }}/24
+static routers={{ default_gateway }}
+static domain_name_servers={{ default_gateway }} {{ dns_nameservers | join(' ') }}
