--- a/setup/networking/templates/hosts.j2
+++ b/setup/networking/templates/hosts.j2
@@ -1,13 +1,10 @@
-127.0.0.1 localhost
-::1   localhost ip6-localhost ip6-loopback
-fe00::0   ip6-localnet
-ff00::0   ip6-mcastprefix
-ff02::1   ip6-allnodes
-ff02::2   ip6-allrouters
+127.0.0.1	localhost
+::1		    localhost ip6-localhost ip6-loopback
+ff02::1		ip6-allnodes
+ff02::2		ip6-allrouters
 
-127.0.1.1 {{ dramble_hostname }}
+127.0.1.1 {{ gramble_hostname }}
 
-{# Add an entry for each host in the cluster, using the loop index to map IPs #}
-{% for host in groups['dramble'] %}
-10.0.100.{{ 60 + loop.index }} kube{{ loop.index }} kube{{ loop.index }}.pidramble.com
+{% for (key, value) in mac_address_mapping.items() %}
+{{ value.ip }} {{ value.name.split('.')[0] }} {{ value.name }}
 {% endfor %}
