--- a/setup/networking/templates/hosts.j2
+++ b/setup/networking/templates/hosts.j2
@@ -3,7 +3,7 @@
 ff02::1		ip6-allnodes
 ff02::2		ip6-allrouters
 
-127.0.1.1 {{ bramble_hostname }}
+127.0.1.1 {{ dramble_hostname }}
 
 {% for (key, value) in mac_address_mapping.items() %}
 {{ value.ip }} {{ value.name.split('.')[0] }} {{ value.name }}
