--- a/roles/leds-blinkstick/templates/dramble-node-monitor.j2
+++ b/roles/leds-blinkstick/templates/dramble-node-monitor.j2
@@ -18,6 +18,10 @@ INIT_SLEEP = 0.05
 # Turn-on per second
 PERIODICITY = 5
 
+LED_INDEX = 0
+
+NUM_OF_LEDS = 2
+
 # Class to handle SIGINT/SIGTERM gracefully.
 class GracefulKiller:
     kill_now = False
@@ -53,14 +57,14 @@ def check_node_status():
 
 # Function to update Blinkstick light to reflect current node status.
 def update_blinkenlights(nano):
-    current_color = nano.get_color()
+    current_color = nano.get_color(index=LED_INDEX)
     if check_node_status():
         if current_color != [0, 128, 0]:
-            nano.set_color(red=0, green=128, blue=0)
+            nano.set_color(index=LED_INDEX, red=0, green=128, blue=0)
             print 'Blinkstick changed to reflect Ready status.'
     else:
         if current_color != [128, 0, 0]:
-            nano.set_color(red=128, green=0, blue=0)
+            nano.set_color(index=LED_INDEX, red=128, green=0, blue=0)
             print 'Blinkstick changed to reflect NotReady status.'
     time.sleep(PERIODICITY)
 
@@ -81,4 +85,10 @@ while True:
         print >> sys.stderr, "Exception: %s" % str(e)
         sys.exit(1)
 nano.turn_off()
+
+# turn_off doesn't automatically recognize all the leds
+# follow https://forums.blinkstick.com/t/python-only-first-led-turns-off-turn-off/452/2
+led_zeros = [0] * 3 * NUM_OF_LEDS
+nano.set_led_data(0, led_zeros)
+
 print "Exiting gracefully."
