--- a/setup/networking/templates/dhcpcd.conf.j2
+++ b/setup/networking/templates/dhcpcd.conf.j2
@@ -3,7 +3,7 @@
 
 interface eth0
 static ip_address={{ dramble_ip_address }}/24
-static routers=10.0.100.1
+static routers={{ dramble_ip_gateway }}
 static domain_name_servers={{ dns_nameservers | join(' ') }}
 
 interface wlan0
